--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:gravity="start"
     android:layout_margin="15dp"
-    tools:context=".StartFragment">
+    tools:context=".view.StartFragment">
 
 
     <ImageView
