--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/startFragment"
-        android:name="com.example.samsungsupabase.StartFragment"
+        android:name="com.example.samsungsupabase.view.StartFragment"
         android:label="fragment_start"
         tools:layout="@layout/fragment_start" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/ordersFragment"
-        android:name="com.example.samsungsupabase.OrdersFragment"
+        android:name="com.example.samsungsupabase.view.OrdersFragment"
         android:label="fragment_orders"
         tools:layout="@layout/fragment_orders" />
 </navigation>
